change style modal

--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -33,7 +33,7 @@
           />
           <source
             media="(max-width: 767px)"
-            srcset="./images/mobbuynow1.png 1x, ./images/mobbuynow1@2x.png 2x"
+            srcset="./images/mobbuynow2.png 1x, ./images/mobbuynow2@2x.png 2x"
           />
           <img src="./images/mobbuynow2.png" class="buy-list__img" alt="200g" />
         </picture>
@@ -46,10 +46,10 @@
             srcset="./images/descbuynow3.png 1x, ./images/descbuynow3@2x.png 2x"
           />
           <source
-            media="(max-width: 768px)"
+            media="(min-width: 768px)"
             srcset="./images/mobbuynow3.png 1x, ./images/mobbuynow3@2x.png 2x"
           />
-          <img src="./images/mobbuynow3.png" class="buy-list__img" alt="300g" />
+          <img src="./images/descbuynow3.png" class="buy-list__img" alt="300g" />
         </picture>
         <button class="buy-list__grams">300 g</button>
       </li>
@@ -94,7 +94,7 @@
               <use href="/src/images/icons/symbol-defs.svg#icon-Ukraine" >
               </use>
             </svg>
-            <p class="phone-container__text"></p>
+            <p class="phone-container__text">+380</p>
           </div>
           <input
             type="text"
