--- a/src/partials/review-modal.html
+++ b/src/partials/review-modal.html
@@ -36,7 +36,11 @@
         </svg>
         +380
       </button>
-      <textarea class="review-form__textarea" placeholder="Enter text">
+      <textarea
+        placeholder="Enter text"
+        class="review-form__textarea"
+        maxlength="1200"
+      >
       </textarea>
     </form>
     <button type="button" class="review-modal__btn" data-open-feedback>
