--- a/src/sass/components/_burger-menu.scss
+++ b/src/sass/components/_burger-menu.scss
@@ -12,6 +12,9 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
   transform: translateX(0);
+  &::-webkit-scrollbar {
+    display: none;
+  }
   @media (min-width: 768px) {
     width: 290px;
   }
