--- a/src/sass/components/_review-modal.scss
+++ b/src/sass/components/_review-modal.scss
@@ -65,8 +65,8 @@
   }
   &__close {
     position: absolute;
-    top: 28px;
-    right: 28px;
+    top: 14px;
+    right: 14px;
     border-radius: 50%;
     width: 28px;
     height: 28px;
@@ -78,6 +78,8 @@
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @media (min-width: 768px) {
+      top: 28px;
+      right: 28px;
       width: 30px;
       height: 30px;
     }
@@ -124,8 +126,8 @@
       margin-bottom: 19px;
     }
 
-    &:focus {
-      color: getColor('black');
+    &::placeholder {
+      color: #404040;
     }
 
     &:nth-child(3) {
@@ -140,7 +142,6 @@
     border: 1px solid rgba(64, 64, 64, 0.1);
     border-radius: 13px;
     width: 100%;
-    max-width: 100%;
     height: 91px;
     &:focus {
       outline: none;
@@ -148,10 +149,12 @@
 
     font-family: getFont('Montserrat');
     @include text(13px);
-    color: rgba(64, 64, 64, 0.1);
 
-    &:focus {
-      color: getColor('black');
+    &::placeholder {
+      color: #404040;
+    }
+    @media (min-width: 768px) {
+      height: 137px;
     }
   }
   &__btn {
