--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -91,7 +91,7 @@
           <h2 class="buy-now-list__title">Phone number</h2>
           <div class="phone-container">
             <svg class="phone-container__svg">
-              <use href="/src/images/icons/symbol-defs.svg#icon-Ukraine" >
+              <use href="./images/icons/symbol-defs.svg#icon-Ukraine" >
               </use>
             </svg>
             <p class="phone-container__text">+380</p>
@@ -109,7 +109,7 @@
         <li class="buy-now-list__item buy-now-list__item--card">
           <div class="card-container">
             <svg class="card-container__svg">
-              <use href="/src/images/icons/symbol-defs.svg#icon-mastercard" ></use>
+              <use href="./images/icons/symbol-defs.svg#icon-mastercard" ></use>
             </svg>
             <p class="card-container__text"></p>
           </div>
