--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -51,7 +51,7 @@
           <a href="#sellers" class="footer-nav-list__link">Top sellers</a>
         </li>
         <li class="footer-nav-list__item">
-          <a href="#revievs" class="footer-nav-list__link">Chocolate is loved</a>
+          <a href="#reviews" class="footer-nav-list__link">Chocolate is loved</a>
         </li>
       </ul>
     
