--- a/src/sass/components/_buy-modal.scss
+++ b/src/sass/components/_buy-modal.scss
@@ -6,6 +6,7 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   z-index: 9;
 }
 .is-hidden {
@@ -30,7 +31,9 @@
     width: 609px;
     padding: 48px 0;
   }
-
+  &::-webkit-scrollbar {
+    display: none;
+  }
   &__btn-close {
     @include flex(center, row, nowrap, center);
 
@@ -41,6 +44,7 @@
     height: 24px;
     border: none;
     background-color: transparent;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @media (min-width: 768px) {
       width: 28px;
       height: 28px;
@@ -116,6 +120,7 @@
     width: 96px;
     height: 33px;
     margin: 0 auto;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
@@ -140,7 +145,7 @@
     color: getColor('white');
     border-radius: 100px;
     padding: 12px 28px;
-
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: getColor('orange');
     @media (min-width: 768px) {
       padding: 14px 40px;
