--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -72,7 +72,7 @@
     text-align: center;
     color: getColor('white');
     
-  
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover {
     
     color: getColor('orange');
@@ -134,7 +134,7 @@
   top: 29px;
   left: 0;
   width: 0px;
-  height: 4px;
+  height: 2px;
   background-color: getColor('orange');
   transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
