--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -24,14 +24,14 @@
     </ul>
     <ul class="menu-social">
       <li class="menu-social__item">
-        <a href="#" class="menu-social__link">
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="menu-social__link">
           <svg class="menu-social__icon">
             <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="menu-social__item">
-        <a href="#" class="menu-social__link">
+        <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer" class="menu-social__link">
           <svg class="menu-social__icon">
             <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
           </svg>
