--- a/src/partials/review-modal.html
+++ b/src/partials/review-modal.html
@@ -37,11 +37,10 @@
         +380
       </button>
       <textarea
-        placeholder="Enter text"
         class="review-form__textarea"
+        placeholder="Enter text"
         maxlength="1200"
-      >
-      </textarea>
+      ></textarea>
     </form>
     <button type="button" class="review-modal__btn" data-open-feedback>
       Send
