--- a/src/sass/components/_review-modal.scss
+++ b/src/sass/components/_review-modal.scss
@@ -115,12 +115,14 @@
     display: block;
     padding: 14px 18px;
     margin-bottom: 14px;
-    border: 1px solid rgba(64, 64, 64, 0.1);
+    border: 1px solid rgba(17, 17, 17, 0.05);
     border-radius: 13px;
+    box-shadow: 0px 5.44px 5.44px 0px rgba(0, 0, 0, 0.03);
+    background-color: #fafafa;
 
     font-family: getFont('Montserrat');
     @include text(13px);
-    color: rgba(64, 64, 64, 0.1);
+    color: #404040;
 
     @media (min-width: 768px) {
       margin-bottom: 19px;
@@ -143,6 +145,9 @@
     border-radius: 13px;
     width: 100%;
     height: 91px;
+    color: #404040;
+    box-shadow: 0px 5.44px 5.44px 0px rgba(0, 0, 0, 0.03);
+    background-color: #fafafa;
     &:focus {
       outline: none;
     }
