modal-subscrib_add

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,5 +16,6 @@
 @import './components/footer';
 @import './components/review-modal';
 @import './components/scroll-to-top';
+@import './components/subscribe-modal';
 
 
