--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -2,7 +2,7 @@
   <div class="modal-buy">
     <button class="modal-buy__btn-close" type="button" data-close-buy>
       <svg class="modal-buy__close-svg">
-        <use href="/src/images/icons/symbol-defs.svg#icon-close"></use>
+        <use href="./images/icons/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
     <h2 class="modal-buy__title">
