--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,55 +1,112 @@
 <section class="reviews" id="reviews">
   <div class="container">
-    <h2 class="reviews__title"><span class="reviews__title reviews__title--color">CHOCOLATE</span>IS LOVED</h2>
+    <h2 class="reviews__title">
+      <span class="reviews__title reviews__title--color">CHOCOLATE</span>IS
+      LOVED
+    </h2>
     <div class="swiper reviews-slider">
-    <ul class="reviews-list swiper-wrapper">
-      <li class="reviews-list__item swiper-slide">
+      <ul class="reviews-list swiper-wrapper">
+        <li class="reviews-list__item swiper-slide">
           <div class="reviews-card">
-        <img class="reviews-card__img" src="./images/revievs4.png" srcset="./images/revievs4.png, ./images/revievs4@2x.png" alt="client">
-        <h3 class="reviews-card__name">Victoria Dobrzhanka</h3>
-        <p class="reviews-card__description">I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer <br> chocolate.</p>
-      </div>
-      </li>
-      <li class="reviews-list__item swiper-slide">
+            <img
+              class="reviews-card__img"
+              src="./images/revievs4.png"
+              srcset="./images/revievs4.png, ./images/revievs4@2x.png"
+              alt="client"
+            />
+            <h3 class="reviews-card__name">Victoria Dobrzhanka</h3>
+            <p class="reviews-card__description">
+              I love this chocolate bar. Perfect combination of light crispy
+              wafer, covered in a thin layer <br />
+              chocolate.
+            </p>
+          </div>
+        </li>
+        <li class="reviews-list__item swiper-slide">
           <div class="reviews-card">
-        <img class="reviews-card__img" src="./images/revievs5.png" srcset="./images/revievs5.png, ./images/revievs5@2x.png" alt="client">
-        <h3 class="reviews-card__name">Nazar Bobenko</h3>
-        <p class="reviews-card__description">This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
-      </div>
-      </li>
-      <li class="reviews-list__item swiper-slide">
+            <img
+              class="reviews-card__img"
+              src="./images/revievs5.png"
+              srcset="./images/revievs5.png, ./images/revievs5@2x.png"
+              alt="client"
+            />
+            <h3 class="reviews-card__name">Nazar Bobenko</h3>
+            <p class="reviews-card__description">
+              This chocolate confection is a delight! A delight! The wafer is
+              light and crisp, the hazelnut cream is smooth, and the chocolate
+              is good.
+            </p>
+          </div>
+        </li>
+        <li class="reviews-list__item swiper-slide">
           <div class="reviews-card">
-        <img class="reviews-card__img" src="./images/revievs6.png" srcset="./images/revievs6.png, ./images/revievs6@2x.png" alt="client">
-        <h3 class="reviews-card__name">Olena Kampusch</h3>
-        <p class="reviews-card__descriptionw">Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
-      </div>
-      </li>
+            <img
+              class="reviews-card__img"
+              src="./images/revievs6.png"
+              srcset="./images/revievs6.png, ./images/revievs6@2x.png"
+              alt="client"
+            />
+            <h3 class="reviews-card__name">Olena Kampusch</h3>
+            <p class="reviews-card__descriptionw">
+              Chocolate is a family favourite treat. Love the delicious smooth
+              chocolate and the creaminess inside. The wafer is soft but
+              crunchy.
+            </p>
+          </div>
+        </li>
 
-      <li class="reviews-list__item swiper-slide">
-        <div class="reviews-card">
-      <img class="reviews-card__img" src="./images/reviews1.png" srcset="./images/reviews1.png, ./images/reviews1@2x.png" alt="client">
-      <h3 class="reviews-card__name">Natalia Sus</h3>
-      <p class="reviews-card__description">The chocolate assortment was delicious. Both dark and milk chocolate pieces were smooth and just right on the sweetness level. </p>
+        <li class="reviews-list__item swiper-slide">
+          <div class="reviews-card">
+            <img
+              class="reviews-card__img"
+              src="./images/reviews1.png"
+              srcset="./images/reviews1.png, ./images/reviews1@2x.png"
+              alt="client"
+            />
+            <h3 class="reviews-card__name">Natalia Sus</h3>
+            <p class="reviews-card__description">
+              The chocolate assortment was delicious. Both dark and milk
+              chocolate pieces were smooth and just right on the sweetness
+              level.
+            </p>
+          </div>
+        </li>
+        <li class="reviews-list__item swiper-slide">
+          <div class="reviews-card">
+            <img
+              class="reviews-card__img"
+              src="./images/reviews2.png"
+              srcset="./images/reviews2.png, ./images/reviews2@2x.png"
+              alt="client"
+            />
+            <h3 class="reviews-card__name">Danilo Nottingham</h3>
+            <p class="reviews-card__description">
+              This is delicious. It so rich and flavorful you don’t need to use
+              as many. I love topping an apple with almond butter and these
+              chips for a snack.
+            </p>
+          </div>
+        </li>
+        <li class="reviews-list__item swiper-slide">
+          <div class="reviews-card">
+            <img
+              class="reviews-card__img"
+              src="./images/reviews3.png"
+              srcset="./images/reviews3.png, ./images/reviews3@2x.png"
+              alt="client"
+            />
+            <h3 class="reviews-card__name">Irina Tydnyuk</h3>
+            <p class="reviews-card__descriptionw">
+              This is simply the best chocolate around, and I'm just thrilled to
+              support a local company! Best local chocolate - world class :)
+            </p>
+          </div>
+        </li>
+      </ul>
+      <div class="swiper-pagination"></div>
     </div>
-    </li>
-    <li class="reviews-list__item swiper-slide">
-        <div class="reviews-card">
-      <img class="reviews-card__img" src="./images/reviews2.png" srcset="./images/reviews2.png, ./images/reviews2@2x.png" alt="client">
-      <h3 class="reviews-card__name">Danilo Nottingham</h3>
-      <p class="reviews-card__description">This is delicious. It so rich and flavorful you don’t need to use as many. I love topping an apple with almond butter and these chips for a snack.</p>
-    </div>
-    </li>
-    <li class="reviews-list__item swiper-slide">
-        <div class="reviews-card">
-      <img class="reviews-card__img" src="./images/reviews3.png" srcset="./images/reviews3.png, ./images/reviews3@2x.png" alt="client">
-      <h3 class="reviews-card__name">Irina Tydnyuk</h3>
-      <p class="reviews-card__descriptionw">This is simply the best chocolate around, and I'm just thrilled to support a local company! Best local chocolate - world class :)</p>
-    </div>
-    </li>
-
-    </ul>
-    <div class="swiper-pagination"></div>
-  </div>
-    <button class="reviews__btn" type="button" data-open-review>Leave a review</button>
+    <button class="reviews__btn" type="button" data-open-review>
+      Leave a review
+    </button>
   </div>
 </section>
