--- a/src/sass/components/_product.scss
+++ b/src/sass/components/_product.scss
@@ -67,6 +67,8 @@
     background-color: #fafafa;
     margin: 0 auto;
     border: 1px solid #1111110d;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
       background-color: getColor('orange');
