--- a/src/sass/components/_review-modal.scss
+++ b/src/sass/components/_review-modal.scss
@@ -30,6 +30,10 @@
     min-width: 517px;
   }
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   &__title {
     font-family: getFont('Montserrat');
     text-transform: uppercase;
@@ -76,7 +80,6 @@
     background-color: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
     @media (min-width: 768px) {
       top: 28px;
       right: 28px;
@@ -86,10 +89,10 @@
 
     &:hover,
     &:focus {
-      background-color: #fcf1e0;
+      background-color: getColor('orange');
     }
     &:hover .review-modal__icon {
-      fill: getColor('orange');
+      fill: getColor('white');
     }
   }
   &__icon {
@@ -123,6 +126,10 @@
     font-family: getFont('Montserrat');
     @include text(13px);
     color: #404040;
+
+    &:user-invalid {
+      border-color: red;
+    }
 
     @media (min-width: 768px) {
       margin-bottom: 19px;
