--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,9 @@
 @import './components/social';
 @import './components/footer';
 @import './components/review-modal';
+@import './components/modal-feedback';
+@import './components/modal-thanks';
 @import './components/scroll-to-top';
+
 
 
