--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -49,7 +49,11 @@
             media="(min-width: 768px)"
             srcset="./images/mobbuynow3.png 1x, ./images/mobbuynow3@2x.png 2x"
           />
-          <img src="./images/descbuynow3.png" class="buy-list__img" alt="300g" />
+          <img
+            src="./images/descbuynow3.png"
+            class="buy-list__img"
+            alt="300g"
+          />
         </picture>
         <button class="buy-list__grams">300 g</button>
       </li>
@@ -91,8 +95,7 @@
           <h2 class="buy-now-list__title">Phone number</h2>
           <div class="phone-container">
             <svg class="phone-container__svg">
-              <use href="./images/icons/symbol-defs.svg#icon-Ukraine" >
-              </use>
+              <use href="./images/icons/symbol-defs.svg#icon-Ukraine"></use>
             </svg>
             <p class="phone-container__text">+380</p>
           </div>
@@ -109,7 +112,7 @@
         <li class="buy-now-list__item buy-now-list__item--card">
           <div class="card-container">
             <svg class="card-container__svg">
-              <use href="./images/icons/symbol-defs.svg#icon-mastercard" ></use>
+              <use href="./images/icons/symbol-defs.svg#icon-mastercard"></use>
             </svg>
             <p class="card-container__text"></p>
           </div>
