--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,14 +36,24 @@
     </div>
     <ul class="header-social">
       <li class="header-social__item">
-        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="header-social__link">
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="header-social__link"
+        >
           <svg class="header-social__icon">
             <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="header-social__item">
-        <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer" class="header-social__link">
+        <a
+          href="https://www.twitter.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="header-social__link"
+        >
           <svg class="header-social__icon">
             <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
           </svg>
