--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -1,72 +1,128 @@
 <section class="products" id="products">
-    <div class="container">
-      <h2 class="products__title">
-        OUR <span class="products__title products__title--color">PRODUCTS</span>
-      </h2>
-      <div class="swiper products-slider">
+  <div class="container">
+    <h2 class="products__title">
+      OUR <span class="products__title products__title--color">PRODUCTS</span>
+    </h2>
+    <div class="swiper products-slider">
       <ul class="products-list swiper-wrapper">
         <li class="products-list__item swiper-slide">
-          <img class="products-list__img" src="./images/products1.jpg" srcset="./images/products1.jpg, ./images/products1@2x.jpg" alt="chocolate"  />
+          <img
+            class="products-list__img"
+            src="./images/products1.jpg"
+            srcset="./images/products1.jpg, ./images/products1@2x.jpg"
+            alt="chocolate"
+          />
           <h3 class="products-list__title">ORANGE</h3>
           <p class="products-list__name">Dark chocolate</p>
-          
-          <button class="products-list__btn" type="button" data-open-buy>45 UAH</button>
+
+          <button class="products-list__btn" type="button" data-open-buy>
+            45 UAH
+          </button>
         </li>
         <li class="products-list__item swiper-slide">
-          <img class="products-list__img" src="./images/products2.jpg" srcset="./images/products2.jpg, ./images/products2@2x.jpg" alt="chocolate"  />
+          <img
+            class="products-list__img"
+            src="./images/products2.jpg"
+            srcset="./images/products2.jpg, ./images/products2@2x.jpg"
+            alt="chocolate"
+          />
           <h3 class="products-list__title">APPLE&CRANBERRY</h3>
           <p class="products-list__name">Milk chocolate</p>
-          
-          <button class="products-list__btn" type="button" data-open-buy>50 UAH</button>
+
+          <button class="products-list__btn" type="button" data-open-buy>
+            50 UAH
+          </button>
         </li>
 
         <li class="products-list__item swiper-slide">
-          <img class="products-list__img" src="./images/products3.jpg" srcset="./images/products3.jpg, ./images/products3@2x.jpg" alt="chocolate"  />
+          <img
+            class="products-list__img"
+            src="./images/products3.jpg"
+            srcset="./images/products3.jpg, ./images/products3@2x.jpg"
+            alt="chocolate"
+          />
           <h3 class="products-list__title">LIME&SEA SALT</h3>
           <p class="products-list__name">Dark chocolate</p>
-         
-          <button class="products-list__btn" type="button" data-open-buy>66 UAH</button>
+
+          <button class="products-list__btn" type="button" data-open-buy>
+            66 UAH
+          </button>
         </li>
 
         <li class="products-list__item swiper-slide">
-          <img class="products-list__img" src="./images/products4.jpg" srcset="./images/products4.jpg, ./images/products4@2x.jpg" alt="chocolate"  />
+          <img
+            class="products-list__img"
+            src="./images/products4.jpg"
+            srcset="./images/products4.jpg, ./images/products4@2x.jpg"
+            alt="chocolate"
+          />
           <h3 class="products-list__title">PINEAPPLE</h3>
           <p class="products-list__name">Dark chocolate</p>
-          
-          <button class="products-list__btn" type="button" data-open-buy>54 UAH</button>
+
+          <button class="products-list__btn" type="button" data-open-buy>
+            54 UAH
+          </button>
         </li>
         <li class="products-list__item swiper-slide">
-            <img class="products-list__img" src="./images/products5.jpg" srcset="./images/products5.jpg, ./images/products5@2x.jpg" alt="chocolate"  />
-            <h3 class="products-list__title">CLASSIC</h3>
-            <p class="products-list__name">Milk chocolate</p>
-            
-            <button class="products-list__btn " type="button" data-open-buy>45 UAH</button>
-          </li>
-          <li class="products-list__item swiper-slide">
-            <img class="products-list__img" src="./images/products6.jpg" srcset="./images/products6.jpg, ./images/products6@2x.jpg" alt="chocolate"  />
-            <h3 class="products-list__title">HONEY</h3>
-            <p class="products-list__name">Milk chocolate</p>
-            
-            <button class="products-list__btn" type="button" data-open-buy>50 UAH</button>
-          </li>
-    
-          <li class="products-list__item swiper-slide">
-            <img class="products-list__img" src="./images/products7.jpg" srcset="./images/products7.jpg, ./images/products7@2x.jpg" alt="chocolate" />
-            <h3 class="products-list__title">ROASTED FRUITS</h3>
-            <p class="products-list__name">Dark chocolate</p>
-           
-            <button class="products-list__btn" type="button" data-open-buy>66 UAH</button>
-          </li>
-    
-          <li class="products-list__item swiper-slide">
-            <img class="products-list__img" src="./images/products8.jpg" srcset="./images/products8.jpg, ./images/products8@2x.jpg" alt="chocolate" />
-            <h3 class="products-list__title">CLASSIC</h3>
-            <p class="products-list__name">White chocolate</p>
-            
-            <button class="products-list__btn" type="button" data-open-buy>54 UAH</button>
-          </li>
+          <img
+            class="products-list__img"
+            src="./images/products5.jpg"
+            srcset="./images/products5.jpg, ./images/products5@2x.jpg"
+            alt="chocolate"
+          />
+          <h3 class="products-list__title">CLASSIC</h3>
+          <p class="products-list__name">Milk chocolate</p>
+
+          <button class="products-list__btn" type="button" data-open-buy>
+            45 UAH
+          </button>
+        </li>
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products6.jpg"
+            srcset="./images/products6.jpg, ./images/products6@2x.jpg"
+            alt="chocolate"
+          />
+          <h3 class="products-list__title">HONEY</h3>
+          <p class="products-list__name">Milk chocolate</p>
+
+          <button class="products-list__btn" type="button" data-open-buy>
+            50 UAH
+          </button>
+        </li>
+
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products7.jpg"
+            srcset="./images/products7.jpg, ./images/products7@2x.jpg"
+            alt="chocolate"
+          />
+          <h3 class="products-list__title">ROASTED FRUITS</h3>
+          <p class="products-list__name">Dark chocolate</p>
+
+          <button class="products-list__btn" type="button" data-open-buy>
+            66 UAH
+          </button>
+        </li>
+
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products8.jpg"
+            srcset="./images/products8.jpg, ./images/products8@2x.jpg"
+            alt="chocolate"
+          />
+          <h3 class="products-list__title">CLASSIC</h3>
+          <p class="products-list__name">White chocolate</p>
+
+          <button class="products-list__btn" type="button" data-open-buy>
+            54 UAH
+          </button>
+        </li>
       </ul>
       <div class="swiper-pagination"></div>
     </div>
-</div>
-  </section>
+  </div>
+</section>
