--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -4,7 +4,9 @@
       <li class="benefits-list__item">
         <div class="benefits-svg__circle">
           <svg class="benefits__svg" width="32" height="32">
-            <use href="./images/icons/symbol-defs.svg#icon-benefits-chocolate"></use>
+            <use
+              href="./images/icons/symbol-defs.svg#icon-benefits-chocolate"
+            ></use>
           </svg>
         </div>
         <h2 class="benefits-list__title">Unsurpassed taste</h2>
@@ -33,7 +35,9 @@
       <li class="benefits-list__item">
         <div class="benefits-svg__circle">
           <svg class="benefits__svg" width="32" height="32">
-            <use href="./images/icons/symbol-defs.svg#icon-benefits-shovel"></use>
+            <use
+              href="./images/icons/symbol-defs.svg#icon-benefits-shovel"
+            ></use>
           </svg>
         </div>
         <h2 class="benefits-list__title">Own production</h2>
