--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,42 +1,50 @@
 <footer class="footer" id="footer">
-    <div class="container">
-      <div class="footer-top">
-    <section class="chocomood">
-      <p class="chocomood__text">
-        <span class="chocomood__text chocomood__text--orange"
-          >Chocolate</span>
-        
-        a delicious cure for a bad day
-      </p>
-    </section>
-    <div class="footer__con">
-    <section class="footer-contacts">
-      <h2 class="footer-contacts__title">Contact us</h2>
-      <a href="tel:+380684439426" class="footer-contacts__connection">+380 (68) 443-94-26</a>
-      <a href="mailto:simplychoc@gmail.com" class="footer-contacts__connection">simplychoc@gmail.com</a>
-    </section>
-     <section class="footer-socials">
-      <ul class="footer-media">
-        <li class="footer-media__item">
-          <a href="#" class="footer-media__link">
-            <svg class="footer-media__svg">
-              <use href="/src/images/icons/symbol-defs.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer-media__item">
-          <a href="#" class="footer-media__link">
-            <svg class="footer-media__svg">
-              <use href="/src/images/icons/symbol-defs.svg#icon-twitter"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-  </section>
+  <div class="container">
+    <div class="footer-top">
+      <section class="chocomood">
+        <p class="chocomood__text">
+          <span class="chocomood__text chocomood__text--orange">Chocolate</span>
+
+          a delicious cure for a bad day
+        </p>
+      </section>
+      <div class="footer__con">
+        <section class="footer-contacts">
+          <h2 class="footer-contacts__title">Contact us</h2>
+          <a href="tel:+380684439426" class="footer-contacts__connection"
+            >+380 (68) 443-94-26</a
+          >
+          <a
+            href="mailto:simplychoc@gmail.com"
+            class="footer-contacts__connection"
+            >simplychoc@gmail.com</a
+          >
+        </section>
+        <section class="footer-socials">
+          <ul class="footer-media">
+            <li class="footer-media__item">
+              <a href="#" class="footer-media__link">
+                <svg class="footer-media__svg">
+                  <use
+                    href="/src/images/icons/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-media__item">
+              <a href="#" class="footer-media__link">
+                <svg class="footer-media__svg">
+                  <use
+                    href="/src/images/icons/symbol-defs.svg#icon-twitter"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </section>
+      </div>
     </div>
-</div>
     <div class="footer-down">
-    
       <ul class="footer-nav-list">
         <li class="footer-nav-list__item">
           <a href="#header" class="footer-nav-list__link">Home</a>
@@ -51,10 +59,11 @@
           <a href="#sellers" class="footer-nav-list__link">Top sellers</a>
         </li>
         <li class="footer-nav-list__item">
-          <a href="#reviews" class="footer-nav-list__link">Chocolate is loved</a>
+          <a href="#reviews" class="footer-nav-list__link"
+            >Chocolate is loved</a
+          >
         </li>
       </ul>
-    
     </div>
-    
-  </footer>
+  </div>
+</footer>
