--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -72,7 +72,11 @@
             />
           </picture>
         </div>
-        <button class="sellers-list__btn sellers-list__btn--tab" type="button" data-open-buy>
+        <button
+          class="sellers-list__btn sellers-list__btn--tab"
+          type="button"
+          data-open-buy
+        >
           Buy now
         </button>
       </li>
