--- a/src/partials/social.html
+++ b/src/partials/social.html
@@ -1,12 +1,14 @@
 <section class="social" id="social">
-    <div class="container">
+  <div class="container">
     <h2 class="social__title">exPLORE OUR NEW CHOCOLATE FIRST</h2>
     <p class="social__info">
-      From the velvety texture to the rich and complex flavor, our New
-      Chocolate is a true indulgence that will leave you craving more. Made
-      with only the finest ingredients and handcrafted with the utmost care,
-      each piece is a work of art that is sure to please.
+      From the velvety texture to the rich and complex flavor, our New Chocolate
+      is a true indulgence that will leave you craving more. Made with only the
+      finest ingredients and handcrafted with the utmost care, each piece is a
+      work of art that is sure to please.
     </p>
-    <button type="button" class="social__btn" data-open-subscribe>Subscribe</button>
-    </div>
-  </section>
+    <button type="button" class="social__btn" data-open-subscribe>
+      Subscribe
+    </button>
+  </div>
+</section>
