--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -7,41 +7,38 @@
     padding-bottom: 50px;
   }
 
+  &-top {
+    display: flex;
 
-&-top {
-  display: flex;
+    flex-wrap: wrap;
+    @media (min-width: 768px) {
+      @include flex(space-between, row, nowrap, flex-start);
+    }
 
-  flex-wrap: wrap;
-  @media (min-width: 768px) {
-    @include flex( space-between, row, nowrap, flex-start);
+    border-bottom: 1px solid #ffffff10;
+    margin-bottom: 34px;
   }
-
-  border-bottom: 1px solid #ffffff10;
-  margin-bottom: 34px;
-}
 }
 .chocomood__text {
   font-family: ('Montserrat');
-  @include text( 24px, 500, 1.29, -0.02em);
-  
+  @include text(24px, 500, 1.29, -0.02em);
+
   color: getColor('white');
   max-width: 300px;
   margin-bottom: 31px;
-@media(min-width:1200px){
-  width: 300px;
-}
-&--orange {
-  color: getColor('orange');
-}
+  @media (min-width: 1200px) {
+    width: 300px;
+  }
+  &--orange {
+    color: getColor('orange');
+  }
 }
 .footer__con {
   display: flex;
-  @include flex( space-between, row, nowrap);
+  @include flex(space-between, row, nowrap);
   padding-bottom: 64px;
 }
 .footer-contacts {
- 
-
   display: flex;
   align-items: flex-start;
 
@@ -50,61 +47,56 @@
   @media (min-width: 768px) {
     margin-top: 0;
   }
- 
+
   &__title {
     margin-bottom: 14px;
     font-family: ('Montserrat');
     @include text(17px, 500, 1.29, -0.02em, center);
     color: getColor('white');
-    @media(min-width: 768px){
-        margin-bottom: 11px;
-
+    @media (min-width: 768px) {
+      margin-bottom: 11px;
     }
-
   }
   &__connection {
     font-family: getFont('Montserrat');
     font-weight: 400;
     font-size: 14px;
-  
+
     line-height: 1.29;
     letter-spacing: -0.02em;
     text-align: center;
     color: getColor('white');
-    
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover {
-    
-    color: getColor('orange');
 
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover {
+      color: getColor('orange');
+    }
   }
 }
-}
-
 
 .footer-media {
   display: flex;
   flex-direction: row;
   gap: 15px;
   margin-left: 65px;
-  @media (min-width:768px){
+  @media (min-width: 768px) {
     gap: 20px;
   }
 
-&__svg {
-  width: 22px;
-  height: 22px;
-  fill: getColor('white');
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover {
-   
-    fill: getColor('orange');
-    
+  &__svg {
+    width: 22px;
+    height: 22px;
+    fill: getColor('white');
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover {
+      fill: getColor('orange');
+    }
   }
-}
 }
 .footer-nav-list {
   display: flex;
+  justify-content: center;
+  align-items: flex-start;
   flex-direction: column;
   gap: 18px;
   @media (min-width: 768px) {
@@ -113,34 +105,38 @@
     align-items: center;
   }
 
-&__item{
-  position: relative;
-}
+  &__item {
+    display: inline;
+    position: relative;
+  }
 
-&__link {
-  font-family: getFont('Montserrat');
-  @include text(14px, 500, 1.14, -0.02em, center);
-  color: getColor('white');
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__link {
+    font-family: getFont('Montserrat');
+    @include text(14px, 500, 1.14, -0.02em, center);
+    color: getColor('white');
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover {
+      color: getColor('orange');
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      top: 25px;
+      left: 0;
+      width: 0px;
+      height: 2px;
+      background-color: getColor('orange');
+      transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-
-&:hover {
-  color: getColor("orange");
-}
-&::after{
-  content: '';
-  position: absolute;
-  top: 29px;
-  left: 0;
-  width: 0px;
-  height: 2px;
-  background-color: getColor('orange');
-  transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-&:hover::after,
-      &:focus::after {
-        width: 70%;
+      @media (min-width: 768px) {
+        top: 29px;
+        left: 0;
       }
-}
+    }
+    &:hover::after,
+    &:focus::after {
+      width: 70%;
+    }
+  }
 }
