--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -16,6 +16,10 @@
   @media (min-width: 1200px) {
     padding: 72px 20px;
   }
+
+  & .container{
+    min-width: 260px;
+  }
   &__title {
     font-size: 20px;
     font-weight: 600;
