--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -53,7 +53,7 @@
           <a href="#proces" class="footer-nav-list__link">How it’s made?</a>
         </li>
         <li class="footer-nav-list__item">
-          <a href="#product" class="footer-nav-list__link">Our products</a>
+          <a href="#products" class="footer-nav-list__link">Our products</a>
         </li>
         <li class="footer-nav-list__item">
           <a href="#sellers" class="footer-nav-list__link">Top sellers</a>
