rework modal validation

--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -67,14 +67,14 @@
             <input
               type="text"
               placeholder="Name"
-              class="buy-now-list__input"
+              class="buy-now-list__input buyInput"
               required
             />
 
             <input
               type="text"
               placeholder="Surname"
-              class="buy-now-list__input"
+              class="buy-now-list__input buyInput"
               minlength="3"
               required
             />
@@ -86,7 +86,7 @@
           <input
             type="text"
             placeholder="Enter your email"
-            class="buy-now-list__input"
+            class="buy-now-list__input buyInput"
             minlength="7"
             required
           />
@@ -100,9 +100,9 @@
             <p class="phone-container__text">+380</p>
           </div>
           <input
-            type="text"
+            type="tel"
             placeholder="Phone number"
-            class="buy-now-list__input buy-now-list__input--tel"
+            class="buy-now-list__input buy-now-list__input--tel buyInput"
             id="other__Tel"
             maxlength="40"
             minlength="5"
@@ -120,7 +120,7 @@
           <input
             type="text"
             placeholder="Enter card"
-            class="buy-now-list__input buy-now-list__input--cardnum"
+            class="buy-now-list__input buy-now-list__input--cardnum buyInput"
             minlength="7"
             required
           />
