--- a/src/partials/review-modal.html
+++ b/src/partials/review-modal.html
@@ -13,6 +13,7 @@
     <form class="review-form">
       <input
         type="text"
+        id="reviewsInput"
         class="review-form__input"
         placeholder="Name"
         required
@@ -20,12 +21,14 @@
       />
       <input
         type="email"
+        id="reviewsInput"
         class="review-form__input"
         required
         placeholder="Enter your email"
       />
       <input
         type="tel"
+        id="reviewsInput"
         class="review-form__input"
         required
         placeholder="Phone number"
