--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -67,16 +67,17 @@
             <input
               type="text"
               placeholder="Name"
-              class="buy-now-list__input buyInput"
+              class="buy-now-list__input"
               required
+              id="buyInput"
             />
-
             <input
               type="text"
               placeholder="Surname"
-              class="buy-now-list__input buyInput"
+              class="buy-now-list__input"
               minlength="3"
               required
+              id="buyInput"
             />
           </div>
         </li>
@@ -86,9 +87,10 @@
           <input
             type="text"
             placeholder="Enter your email"
-            class="buy-now-list__input buyInput"
+            class="buy-now-list__input"
             minlength="7"
             required
+            id="buyInput"
           />
         </li>
         <li class="buy-now-list__item buy-now-list__item--tel">
@@ -102,8 +104,8 @@
           <input
             type="tel"
             placeholder="Phone number"
-            class="buy-now-list__input buy-now-list__input--tel buyInput"
-            id="other__Tel"
+            class="buy-now-list__input buy-now-list__input--tel"
+            id="buyInput"
             maxlength="40"
             minlength="5"
             required
@@ -120,7 +122,8 @@
           <input
             type="text"
             placeholder="Enter card"
-            class="buy-now-list__input buy-now-list__input--cardnum buyInput"
+            class="buy-now-list__input buy-now-list__input--cardnum"
+            id="buyInput"
             minlength="7"
             required
           />
