--- a/src/sass/components/_buy-modal.scss
+++ b/src/sass/components/_buy-modal.scss
@@ -8,8 +8,9 @@
   backdrop-filter: blur(5px);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 10;
+  opacity: 1;
 }
-.is-hidden {
+.backdrop-buy.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
