finish work with forms validation

--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -67,17 +67,14 @@
             <input
               type="text"
               placeholder="Name"
-              class="buy-now-list__input"
+              class="buy-now-list__input buyInput"
               required
-              id="buyInput"
             />
             <input
               type="text"
               placeholder="Surname"
-              class="buy-now-list__input"
-              minlength="3"
+              class="buy-now-list__input buyInput"
               required
-              id="buyInput"
             />
           </div>
         </li>
@@ -85,12 +82,11 @@
         <li class="buy-now-list__item">
           <h2 class="buy-now-list__title">Email</h2>
           <input
-            type="text"
+            type="email"
             placeholder="Enter your email"
-            class="buy-now-list__input"
+            class="buy-now-list__input buyInput"
             minlength="7"
             required
-            id="buyInput"
           />
         </li>
         <li class="buy-now-list__item buy-now-list__item--tel">
@@ -104,8 +100,7 @@
           <input
             type="tel"
             placeholder="Phone number"
-            class="buy-now-list__input buy-now-list__input--tel"
-            id="buyInput"
+            class="buy-now-list__input buy-now-list__input--tel buyInput"
             maxlength="40"
             minlength="5"
             required
@@ -122,8 +117,7 @@
           <input
             type="text"
             placeholder="Enter card"
-            class="buy-now-list__input buy-now-list__input--cardnum"
-            id="buyInput"
+            class="buy-now-list__input buy-now-list__input--cardnum buyInput"
             minlength="7"
             required
           />
